Fix sticky scrolling on mobile (#711)

--- a/static/css/section/_local.scss
+++ b/static/css/section/_local.scss
@@ -1,8 +1,3 @@
-body,
-html {
-  overflow-x: hidden;
-}
-
 body {
   background-size: cover;
   @media only screen and (min-width : $breakpoint-medium) {
@@ -106,19 +101,19 @@ body {
     ul.third-level-nav {
       margin-top: -15px;
       padding-top: 0;
-      
+
       li {
         box-sizing: border-box;
         padding-left: 10px;
         width: 50%;
-        
+
         a,
         a:link {
           font-size: 1.142857143em;
         }
       }
     }
-    
+
     ul.second-level-nav li {
       box-sizing: border-box;
       width: 50%;
@@ -168,7 +163,7 @@ body {
     &.open {
       border-bottom: 1px solid $alto-grey;
       display: inherit;
-    
+
       ul.breadcrumb li .after {
         background-image: url('#{$asset-server}cadd096c-nav-up-arrow.svg');
       }
@@ -507,7 +502,7 @@ body {
 .tablet {
   .row-hero {
     margin-top: 0;
-    
+
     h1 {
       padding-top: 20px;
     }
@@ -541,16 +536,16 @@ body {
 .phone {
   .row {
     padding: 20px 10px 0;
-    
+
     @media only screen and (min-width : $breakpoint-medium) {
       padding: 40px 10px 20px;
     }
-    
+
     @media only screen and (min-width : $breakpoint-large) {
       padding: 100px 40px;
     }
   }
-  
+
   .row-hero {
     padding: 0 10px 0;
 
